--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Boutique</title>
+    <title> Responsive Landing page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
     </nav>
 </header>
 <section class="content" id="home">
-<div class="hero">
+<div class="moon">
     <h1>  Home Of Beauty</h1>
     <p>Explore our exquisite collection of Habesha Kemis.</p>
 </div>
